WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87615
REGRESSION(
r108758
): Can't edit <input> elements with :first-letter
https://bugs.webkit.org/show_bug.cgi?id=87615
Summary
REGRESSION(r108758): Can't edit <input> elements with :first-letter
Hajime Morrita
Reported
2012-05-27 22:31:18 PDT
Reported at
http://crbug.com/129313
Attachments
Patch
(8.49 KB, patch)
2012-05-27 22:38 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch
(9.36 KB, patch)
2012-05-27 23:29 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch
(10.88 KB, patch)
2012-05-27 23:39 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch
(8.82 KB, patch)
2012-05-28 01:03 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2012-05-27 22:38:26 PDT
Created
attachment 144270
[details]
Patch
Kent Tamura
Comment 2
2012-05-27 23:02:14 PDT
Comment on
attachment 144270
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=144270&action=review
> Source/WebCore/rendering/RenderBlock.h:748 > + virtual bool canHaveGeneratedChildren() const { return true; } > + static bool canHaveGeneratedChildren(RenderObject*);
Existence of static canHaveGeneratedChildren() and virtual canHaveGeneratedChildren() is confusing. IMO, we should have "virtual bool RenderObject::canHaveGeneratedChildren()", of which default implementation is { return canHaveChildren(); }, and remove RenderBlock::canHaveGeneratedChildren().
Hajime Morrita
Comment 3
2012-05-27 23:29:05 PDT
Created
attachment 144277
[details]
Patch
Hajime Morrita
Comment 4
2012-05-27 23:29:56 PDT
Kent-san, thanks for taking a look. The updated patch looks much simpler.
Kent Tamura
Comment 5
2012-05-27 23:31:47 PDT
Comment on
attachment 144277
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=144277&action=review
> LayoutTests/ChangeLog:9 > + * fast/forms/input-first-letter-edit-expected.html: Added. > + * fast/forms/input-first-letter-edit.html: Added.
These files are not in the patch.
Hajime Morrita
Comment 6
2012-05-27 23:39:18 PDT
Created
attachment 144279
[details]
Patch
Hajime Morrita
Comment 7
2012-05-27 23:40:16 PDT
Comment on
attachment 144277
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=144277&action=review
>> LayoutTests/ChangeLog:9 >> + * fast/forms/input-first-letter-edit.html: Added. > > These files are not in the patch.
Oops. git reset dropped them. I'm sorry for disturbing. Updated the patch again.
Kent Tamura
Comment 8
2012-05-27 23:50:06 PDT
Comment on
attachment 144279
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=144279&action=review
> Source/WebCore/rendering/RenderBlock.cpp:5994 > -static inline RenderObject* findFirstLetterBlock(RenderBlock* start) > +inline RenderObject* RenderBlock::findFirstLetterBlock() > { > - RenderObject* firstLetterBlock = start; > + RenderObject* firstLetterBlock = this; > while (true) {
Are these changes needed?
Kent Tamura
Comment 9
2012-05-27 23:51:34 PDT
Comment on
attachment 144279
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=144279&action=review
> LayoutTests/ChangeLog:9 > + * fast/forms/input-first-letter-edit-expected.html: Added. > + * fast/forms/input-first-letter-edit.html: Added.
We had better add <input> with :before/:after .
Hajime Morrita
Comment 10
2012-05-28 00:35:15 PDT
(In reply to
comment #8
)
> (From update of
attachment 144279
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=144279&action=review
> > > Source/WebCore/rendering/RenderBlock.cpp:5994 > > -static inline RenderObject* findFirstLetterBlock(RenderBlock* start) > > +inline RenderObject* RenderBlock::findFirstLetterBlock() > > { > > - RenderObject* firstLetterBlock = start; > > + RenderObject* firstLetterBlock = this; > > while (true) { > > Are these changes needed?
Yes, I do't want to make canHaveGeneratedChildren() public. It need to be accessed from a member function.
Kent Tamura
Comment 11
2012-05-28 00:39:14 PDT
Comment on
attachment 144279
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=144279&action=review
>>> Source/WebCore/rendering/RenderBlock.cpp:5994 >>> while (true) { >> >> Are these changes needed? > > Yes, I do't want to make canHaveGeneratedChildren() public. > It need to be accessed from a member function.
RenderObject::canHaveGeneratedChildren() is now public.
Hajime Morrita
Comment 12
2012-05-28 01:03:48 PDT
Created
attachment 144294
[details]
Patch
Hajime Morrita
Comment 13
2012-05-28 01:06:16 PDT
(In reply to
comment #11
)
> (From update of
attachment 144279
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=144279&action=review
> > >>> Source/WebCore/rendering/RenderBlock.cpp:5994 > >>> while (true) { > >> > >> Are these changes needed? > > > > Yes, I do't want to make canHaveGeneratedChildren() public. > > It need to be accessed from a member function. > > RenderObject::canHaveGeneratedChildren() is now public.
RIght. Moved back findFirstLetterBlock() to a static function. On testing after/before, I'll address it on
Bug 87630
.
Kent Tamura
Comment 14
2012-05-28 02:03:45 PDT
Comment on
attachment 144294
[details]
Patch ok
WebKit Review Bot
Comment 15
2012-05-28 16:53:05 PDT
Comment on
attachment 144294
[details]
Patch Clearing flags on attachment: 144294 Committed
r118711
: <
http://trac.webkit.org/changeset/118711
>
WebKit Review Bot
Comment 16
2012-05-28 16:53:11 PDT
All reviewed patches have been landed. Closing bug.
Raphael Kubo da Costa (:rakuco)
Comment 17
2013-05-08 06:39:02 PDT
***
Bug 86405
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug