Can't edit <input> elements with :first-letter https://bugs.webkit.org/show_bug.cgi?id=87615

Reviewed by Kent Tamura.

A check using canHaveGeneratedChildren() should cover not only
button and menulist, but also RenderTextControl.
This change pulles canHaveGeneratedChildren() up
from RenderDeprecatedFlexibleBox to RenderObject,
and lets RenderTextControl override it.

Test: fast/forms/input-first-letter-edit.html

* rendering/RenderBlock.cpp:
(WebCore):
(WebCore::RenderBlock::styleDidChange):
(WebCore::RenderBlock::updateFirstLetter):
* rendering/RenderBlock.h: Removed a static function canHaveGeneratedChildren()
(RenderBlock):
* rendering/RenderDeprecatedFlexibleBox.h:
* rendering/RenderObject.cpp:
(WebCore):
(WebCore::RenderObject::canHaveGeneratedChildren): Added.
* rendering/RenderObject.h:
(RenderObject):
* rendering/RenderTextControl.h:


Canonical link: https://commits.webkit.org/105453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118711 268f45cc-cd09-0410-ab3c-d52691b4dbfc